Fixed spacing issues

--- a/assets/main.css
+++ b/assets/main.css
@@ -86,7 +86,7 @@ ul {
 /*#343838, #005F6B, #008C9E, #00B4CC, #00DFFC*/
 
 .header {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(images/background.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(http://i.xomf.com/hfgfn.png) no-repeat center;
   background-size: cover;
 }
 
@@ -179,10 +179,6 @@ ul {
   margin: 15px !important;
 }
 
-.about-description {
-  padding-right: 30px;
-}
-
 /* Second Block */
 .skills {
   color: black;
@@ -235,6 +231,12 @@ ul {
     height: auto;
   }
 
+}
+
+@media screen and (min-width: 1000px){
+  .about-description {
+    padding-right: 20px;
+  }
 }
 
 @media screen and (max-height: 450px) {
